--- a/modal-product-card-check.html
+++ b/modal-product-card-check.html
@@ -1881,7 +1881,7 @@
 
 
 
-<div class="w-full h-[100dvh]  flex-jc-c fixed top-0 left-0 bg-black/60 z-10 p-4">
+<div class="w-full h-[100dvh]  flex-jc-c fixed top-0 left-0 bg-black/60 z-[1000] p-4">
     <div class="bg-white rounded-2xl p-6 w-full max-w-[500px] relative max-[767px]:p-[15px]">
         <button class="absolute top-4 right-4">
             <img src="img/icons/xmark.svg" alt="Փակել">
