--- a/gift-card.html
+++ b/gift-card.html
@@ -27,13 +27,13 @@
 
   <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
     <li>
-      <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
     <li class="text-[18px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[18px] text-[#6E6E6E] hover:text-blue"> Электронная подарочная карта</a>
+      <a href="catalog.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-blue"> Электронная подарочная карта</a>
     </li>
   </ul>
 
