--- a/modal-product-card-check2.html
+++ b/modal-product-card-check2.html
@@ -1879,8 +1879,7 @@
   <component src="./components/footer.html"></component>
 
 
-
-<div class="w-full h-[100dvh]  flex-jc-c fixed top-0 left-0 bg-black/60 z-10 p-4">
+<div class="w-full h-[100dvh]  flex-jc-c fixed top-0 left-0 bg-black/60 z-[1000] p-4">
     <div class="bg-white rounded-2xl p-6 w-full max-w-[500px] relative ">
         <button class="absolute top-4 right-4">
             <img src="img/icons/xmark.svg" alt="Փակել">
@@ -1894,7 +1893,7 @@
             <div class="flex justify-between items-center">
                 <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[22px]">На 2 месяца</b>
                 <div class="">
-                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px] text-right">4 х 2500 ₽</b>
                     <span class="text-[16px] text-[#707070]">Без переплаты</span>
                 </div>
             </div>
@@ -1925,7 +1924,7 @@
             <div class="flex justify-between items-center">
                 <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[18px]">На 6 месяцев</b>
                 <div class="">
-                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px] text-right">4 х 2500 ₽</b>
                     <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">Переплата 474₽/мec</span>
                 </div>
             </div>
@@ -1956,7 +1955,7 @@
             <div class="flex justify-between items-center">
                 <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[22px]">На 4 месяца</b>
                 <div class="">
-                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px] text-right">4 х 2500 ₽</b>
                     <span class="text-[16px] text-[#707070]">Без переплаты</span>
                 </div>
             </div>
