--- a/check-offer.html
+++ b/check-offer.html
@@ -217,7 +217,7 @@
 
       <div class="col-span-5">
         <div class="w-full bg-[#F4F4F4] rounded-[24px] p-10 sticky top-4 max-[767px]:p-[20px]">
-          <h3 class="text-[#212121] text-[24px] font-semibold mb-6 font-semibold">Итоговый заказ</h3>
+          <h3 class="text-[#212121] text-[24px] font-semibold mb-6">Итоговый заказ</h3>
 
 
           <div class="w-full pb-4 border-b max-[767px]:border-none">
@@ -237,7 +237,7 @@
                 </div>
               </div>
 
-              <h5 class="w-[115px] text-[#6E6E6E]">350 руб</h5>
+              <h5 class="w-[115px] text-[#6E6E6E] text-right">350 руб</h5>
             </div>
 
             <div class="w-full gap-2 flex-jsb-s mb-3 max-[767px]:pb-[50px] max-[767px]:relative max-[767px]:border-b max-[767px]:border-[rgba(110,110,110,0.25)]">
@@ -256,7 +256,7 @@
                 </div>
               </div>
 
-              <h5 class="w-[115px] text-[#6E6E6E]">350 руб</h5>
+              <h5 class="w-[115px] text-[#6E6E6E] text-right">350 руб</h5>
             </div>
           </div>
 
