--- a/comparisons.html
+++ b/comparisons.html
@@ -45,8 +45,8 @@
     <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Сравнения</h1>
     <div class="flex-js-c gap-4 max-[767px]:flex-wrap">
       <span class="text-[#6E6E6E] max-[767px]:w-full">Показывать</span>
-      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Все характеристики</button>
-      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Только различия</button>
+      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px] burder transition hover:border-[#009FFF] max-[767px]:text-[14px] max-[767px]:w-[46%]">Все характеристики</button>
+      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px] burder transition hover:border-[#009FFF] max-[767px]:text-[14px] max-[767px]:w-[46%]">Только различия</button>
       <a href="#" class="text-[#6E6E6E] underline flex-js-e max-[767px]:w-full">
         <img src="img/icons/delete-remove.svg" alt="delete-remove">
         Очистить
