--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Контакты</h1>
 
 
-  <div class="w-full h-auto grid grid-cols-12 gap-10 align-center">
+  <div class="w-full h-auto grid grid-cols-12 gap-10 align-center max-[1400px]:block">
     <div class="w-full col-span-12 md:col-span-7 lg:col-span-5">
       <table class="w-full">
         <tbody>
@@ -109,7 +109,7 @@
         </tbody>
       </table>
     </div>
-    <div class="w-full h-[580px] rounded-[24px] overflow-hidden col-span-12 md:col-span-5 lg:col-span-7">
+    <div class="w-full h-[580px] rounded-[24px] overflow-hidden col-span-12 md:col-span-5 lg:col-span-7 max-[1400px]:mt-[20px]">
       <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2017.4627935389778!2d37.598040100804646!3d55.754497286660424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sam!4v1753383209161!5m2!1sru!2sam"
           width="100%" height="580" style="border:0;" allowfullscreen="" loading="lazy"
