--- a/home.html
+++ b/home.html
@@ -866,13 +866,12 @@
   max-[1024px]:flex max-[1024px]:flex-col relative z-[0]">
     <h2 class="font-lena max-w-[700px] mb-[20px] font-normal text-[#336B46] max-[1024px]:text-[32px] text-[64px] leading-[100%]">
       Сапоги для рыбаков со скидкой 25%!</h2>
-    <p class="max-w-[650px] text-[20px] text-[#323232] max-[1024px]:mb-[24px] leading-[110%] max-[1024px]:text-[16px]">
+    <p class="max-w-[650px] text-[20px] text-[#323232] leading-[110%] max-[1024px]:text-[16px] max-[1024px]:mb-[10px]">
       Летний сезон в самом разгаре, это значит стартует наша акция.
       Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
     </p>
     <img src="img/valinki.png" alt="" class="absolute z-[-1] top-0 right-[140px]
-    max-[1500px]:w-[40vw] max-[1500px]:right-[0px] max-[1024px]:static max-[1024px]:ml-[auto]
-    max-[1024px]:mt-[auto]">
+    max-[1500px]:w-[40vw] max-[1500px]:right-[0px] max-[1024px]:hidden">
   </div>
 
   <div class="w-full h-auto mt-[70px]">
@@ -1071,7 +1070,7 @@
 
     <div class="swiper swiperNews">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <div class="swiper-slide max-[767px]:w-[310px]">
           <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news.png" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
@@ -1081,7 +1080,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide max-[767px]:w-[310px]">
           <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-2.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
@@ -1091,7 +1090,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide max-[767px]:w-[310px]">
           <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-3.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
@@ -1101,7 +1100,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide max-[767px]:w-[310px]">
           <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-4.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
