--- a/product-card.html
+++ b/product-card.html
@@ -793,7 +793,7 @@
     <div class="swiper catSwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px]  max-[767px]:h-[180px] rounded-[8px] overflow-hidden relative">
             <img src="img/categories-img1.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
               <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena ">Удилища</span>
@@ -801,7 +801,7 @@
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px]  max-[767px]:h-[180px] rounded-[8px] overflow-hidden relative">
             <img src="img/categories-img2.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
               <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Приманки</span>
@@ -809,7 +809,7 @@
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px]  max-[767px]:h-[180px] rounded-[8px] overflow-hidden relative">
             <img src="img/categories-img3.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
               <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Зимняя рыбалка</span>
@@ -817,7 +817,7 @@
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px]  max-[767px]:h-[180px] rounded-[8px] overflow-hidden relative">
             <img src="img/categories-img4.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
               <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Оснастка</span>
@@ -825,7 +825,7 @@
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px]  max-[767px]:h-[180px] rounded-[8px] overflow-hidden relative">
             <img src="img/categories-img1.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
               <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena ">Удилища</span>
@@ -833,7 +833,7 @@
           </a>
         </div>
       </div>
-      <div class="swiper-pagination"></div>
+      <div class="swiper-pagination max-[767px]:bottom-[-30px] max-[767px]:relative"></div>
     </div>
   </div>
 
