--- a/sing-in.html
+++ b/sing-in.html
@@ -81,11 +81,18 @@
         <input type="email" placeholder="Введите почту" class="h-[54px] w-full mb-4 p-2 border rounded"
                style="border-color: #D9D9D9;"/>
         <span class="text-[14px] text-[#323232] mb-[6px] block">Ваш пароль</span>
-        <input type="password" placeholder="Ваш пароль" class="h-[54px] w-full mb-4 p-2 border rounded"
-               style="border-color: #D9D9D9;"/>
+       <div class="relative">
+        <img src="img/visible-eye.svg" alt="" class="absolute top-[15px] right-[15px]">
+        <input type="password" placeholder="Ваш пароль" class="h-[54px] w-full mb-4 p-2 border rounded pr-[40px]"
+        style="border-color: #D9D9D9;"/>
+       </div>
+
         <span class="text-[14px] text-[#323232] mb-[6px] block">Подтвердите пароль</span>
-        <input type="password" placeholder="Подтвердите пароль" class="h-[54px] w-full mb-4 p-2 border rounded"
-               style="border-color: #D9D9D9;"/>
+        <div class="relative">
+          <img src="img/visible-eye.svg" alt="" class="absolute top-[15px] right-[15px]">
+          <input type="password" placeholder="Подтвердите пароль" class="h-[54px] w-full mb-4 p-2 border rounded pr-[40px]"
+                 style="border-color: #D9D9D9;"/>
+         </div>
         <span class="text-[14px] text-[#323232] mb-[6px] block">Введите защитную капчу</span>
         <div class="grid grid-cols-2 gap-2.5 mb-[20px]">
           <div class="flex border rounded-[8px] border-[rgba(110,110,110,0.25)] p-[8px]">
