--- a/favorite.html
+++ b/favorite.html
@@ -56,11 +56,11 @@
     max-[767px]:mb-[12px]">Показывать</span>
     <div class="flex">
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
-        border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Акции</a>
+        border-[rgba(110,110,110,0.25)] hover:border-blue">Акции</a>
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
-         border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Новинки</a>
+         border-[rgba(110,110,110,0.25)] hover:border-blue">Новинки</a>
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E]
-        border border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Хиты</a>
+        border border-[rgba(110,110,110,0.25)] hover:border-blue">Хиты</a>
     </div>
   </div>
 
@@ -70,7 +70,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-gray.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
@@ -137,7 +137,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-gray.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
@@ -204,7 +204,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-gray.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
