--- a/gift-card.html
+++ b/gift-card.html
@@ -46,16 +46,14 @@
             <!-- Tabs -->
             <div class="flex gap-2">
               <button
-                  class="tab-btn rounded-full px-5 py-2 text-sm transition-all"
+                  class="tab-btn rounded-full px-5 py-2 text-sm transition-all bg-[#009FFF] text-white border border-transparent hover:border-blue hover:!text-blue hover:!bg-white"
                   data-tab="tab1"
-                  style="background-color: #009FFF; color: #fff"
               >
               Другу
               </button>
               <button
-                  class="tab-btn rounded-full px-5 py-2 text-sm transition-all"
+                  class="tab-btn rounded-full px-5 py-2 text-sm transition-all bg-[#F2F2F2] text-black border border-transparent hover:border-blue hover:!text-blue hover:!bg-white"
                   data-tab="tab2"
-                  style="background-color: #F2F2F2; color: #000"
               >
               Себе
               </button>
