--- a/brands.html
+++ b/brands.html
@@ -25,7 +25,7 @@
 <div class="container mt-4">
 
 
-  <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
+  <ul class="flex-js-c gap-1 mb-7">
     <li>
       <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
