--- a/profile-comparison.html
+++ b/profile-comparison.html
@@ -166,10 +166,10 @@
             <tbody>
             <tr class="border-b">
               <td class="pb-4 min-w-[250px] w-[300px]">
-                <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2 mt-[160px]">
-                  <img src="img/icons/delete-remove.svg" alt="delete-remove">
-                  Очистить
-                </a>
+<!--                <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2 mt-[160px]">-->
+<!--                  <img src="img/icons/delete-remove.svg" alt="delete-remove">-->
+<!--                  Очистить-->
+<!--                </a>-->
               </td>
               <td class="pb-4 min-w-[250px] w-[300px]">
                 <div class="px-[30px] relative">
@@ -308,12 +308,12 @@
 
         <div class="w-full block sm:hidden mt-10">
 
-          <div class="w-full pb-4 border-b mb-4">
-            <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
-              <img src="img/icons/delete-remove.svg" alt="delete-remove">
-              Очистить
-            </a>
-          </div>
+<!--          <div class="w-full pb-4 border-b mb-4">-->
+<!--            <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">-->
+<!--              <img src="img/icons/delete-remove.svg" alt="delete-remove">-->
+<!--              Очистить-->
+<!--            </a>-->
+<!--          </div>-->
 
 
           <div data-for="4" class="w-full mb-10">
