--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,7 @@
 
         <h3 class="font-semibold mt-5 mb-1">Цена, рублей</h3>
 
-        <div class="border-b lg:block mt-2">
+        <div class="lg:block mt-2">
           <div class="w-full flex-jsb-c gap-2">
             <div class="fle-js-c gap-2 text-[#6E6E6E] w-[48%]">
               от
@@ -642,7 +642,11 @@
                 Акции
               </button>
               <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] transition cursor-pointer cursor-default text-[#6E6E6E] hover:text-blue hover:border-blue">
-                <img src="img/icons/percent.svg" alt="percent">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0001 17.0021V17.0021C12.159 17.002 12.2932 16.8844 12.3143 16.727L12.4623 15.6205C12.6817 13.9756 13.9757 12.6815 15.6206 12.4622L16.7271 12.3141C16.8845 12.2931 17.0021 12.1588 17.0022 12V12C17.0021 11.8412 16.8845 11.7069 16.7271 11.6859L15.6206 11.5378C13.9757 11.3185 12.6817 10.0244 12.4623 8.3795L12.3143 7.27304C12.2932 7.11561 12.159 6.99803 12.0001 6.99792V6.99792C11.8413 6.99803 11.707 7.11561 11.686 7.27304L11.5379 8.3795C11.3186 10.0244 10.0245 11.3185 8.37962 11.5378L7.27316 11.6859C7.11573 11.7069 6.99815 11.8412 6.99805 12V12C6.99815 12.1588 7.11573 12.2931 7.27316 12.3141L8.37962 12.4622C10.0245 12.6815 11.3186 13.9756 11.5379 15.6205L11.686 16.727C11.707 16.8844 11.8413 17.002 12.0001 17.0021V17.0021Z" stroke="#336B46" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M18.7209 5.27919C22.432 8.99086 22.4317 15.0082 18.7202 18.7195C15.0087 22.4308 8.99139 22.4308 5.2799 18.7195C1.56841 15.0082 1.56812 8.99086 5.27925 5.27919C7.06163 3.49655 9.47921 2.49506 12.0001 2.49506C14.5209 2.49506 16.9385 3.49655 18.7209 5.27919" stroke="#336B46" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
                 Новинки
               </button>
               <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] transition cursor-pointer cursor-default text-[#6E6E6E] hover:text-blue hover:border-blue">
