--- a/favorite.html
+++ b/favorite.html
@@ -25,7 +25,7 @@
 <div class="container mt-4">
 
 
-  <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
+  <ul class="flex-js-c gap-1 mb-7">
     <li>
       <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
@@ -70,7 +70,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-blue.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
@@ -137,7 +137,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-blue.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
@@ -204,7 +204,7 @@
       <div class="w-full h-[427px] border rounded-[16px] relative">
         <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
-            <img src="img/icons/heard-blue.svg" alt="heard-gray">
+            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
           </div>
           <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer">
             <img src="img/icons/rating-gray.svg" alt="rating-gray">
