--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,7 @@
 
   <div class="w-full flex-jsb-s gap-6">
     <div
-        class="w-full md:w-[320px] md:min-w-[320px] fixed md:relative top-0 left-0 bg-white z-11 hidden md:block h-[100dvh] md:h-auto overflow-y-auto"
+        class="w-full md:w-[320px] md:min-w-[320px] fixed md:relative top-0 left-0 bg-white z-[1000] hidden md:block h-[100dvh] md:h-auto overflow-y-auto"
         id="filter-mobile-modal">
 
       <div class="pb-10 md:pb-0">
@@ -87,7 +87,11 @@
                 Акции
               </button>
               <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E]">
-                <img src="img/icons/percent.svg" alt="percent">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0001 17.0021V17.0021C12.159 17.002 12.2932 16.8844 12.3143 16.727L12.4623 15.6205C12.6817 13.9756 13.9757 12.6815 15.6206 12.4622L16.7271 12.3141C16.8845 12.2931 17.0021 12.1588 17.0022 12V12C17.0021 11.8412 16.8845 11.7069 16.7271 11.6859L15.6206 11.5378C13.9757 11.3185 12.6817 10.0244 12.4623 8.37949L12.3143 7.27302C12.2932 7.1156 12.159 6.99801 12.0001 6.99791V6.99791C11.8413 6.99801 11.707 7.1156 11.686 7.27302L11.5379 8.37949C11.3186 10.0244 10.0245 11.3185 8.37962 11.5378L7.27316 11.6859C7.11573 11.7069 6.99815 11.8412 6.99805 12V12C6.99815 12.1588 7.11573 12.2931 7.27316 12.3141L8.37962 12.4622C10.0245 12.6815 11.3186 13.9756 11.5379 15.6205L11.686 16.727C11.707 16.8844 11.8413 17.002 12.0001 17.0021V17.0021Z" stroke="#336B46" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M18.7209 5.2792C22.432 8.99087 22.4317 15.0082 18.7202 18.7195C15.0087 22.4308 8.99139 22.4308 5.2799 18.7195C1.56841 15.0082 1.56812 8.99087 5.27925 5.2792C7.06163 3.49657 9.47921 2.49507 12.0001 2.49507C14.5209 2.49507 16.9385 3.49657 18.7209 5.2792" stroke="#336B46" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
                 Новинки
               </button>
               <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E]">
