--- a/modal-send-reqest.html
+++ b/modal-send-reqest.html
@@ -844,7 +844,7 @@
 <component src="./components/footer.html"></component>
 
 
-<div class="fixed inset-0 bg-black/40 flex items-center justify-center z-50 p-4">
+<div class="fixed inset-0 bg-black/40 flex items-center justify-center z-[1000] p-4">
   <div class="relative bg-blue text-white rounded-[16px] w-full min-[870px]:max-w-[854px] p-6 md:p-10">
 
     <button class="absolute top-4 right-4">
