--- a/product-card.html
+++ b/product-card.html
@@ -430,27 +430,27 @@
         <div class="w-full bg-[#F4F4F4] rounded-[12px] overflow-hidden relative mb-2 p-6">
           <h3 class="text-[18px] font-semibold mb-1">Информация о доставке Спб</h3>
           <ul>
-            <li class="flex-jsb-c">
+            <li class="flex-jsb-c mb-1">
               <div class="flex-js-c gap-1">
-                <img src="img/icons/location-blue.svg" alt="">
+                <img src="img/icons/location-blue.svg" alt="" class="w-[24px]">
                 Санкт-Петербург, Россия
               </div>
             </li>
-            <li class="flex-jsb-c">
+            <li class="flex-jsb-c mb-1">
               <div class="flex-js-c gap-1">
-                <img src="img/icons/shipped-blue.svg" alt="">
+                <img src="img/icons/shipped-blue.svg" alt="" class="w-[24px]">
                 Самовывоз: бесплатно, от 1 дня
               </div>
             </li>
-            <li class="flex-jsb-c">
+            <li class="flex-jsb-c mb-1">
               <div class="flex-js-c gap-1">
-                <img src="img/icons/car-blue.svg" alt="">
+                <img src="img/icons/car-blue.svg" alt="" class="w-[24px]">
                 Доставка курьером: 1-2 дня, 300₽ бесплатно от 5 000₽
               </div>
             </li>
-            <li class="flex-jsb-c">
+            <li class="flex-jsb-c mb-1">
               <div class="flex-js-c gap-1">
-                <img src="img/icons/shipped-check.svg" alt="">
+                <img src="img/icons/shipped-check.svg" alt="" class="w-[24px]">
                 Курьер-эксперс: сегодня, 500₽
               </div>
             </li>
