--- a/variants-popup.html
+++ b/variants-popup.html
@@ -1051,15 +1051,16 @@
             <span class="text-[#6e6e6e] text-[18px] mr-[4px]">Цвет:</span>
             <b class="text-[#323232] text-[18px] font-medium">Tg</b>
         </div>
-        <form class="grid grid-cols-5 gap-[10px] mb-[24px] max-[767px]:grid-cols-4">
+        <div class="w-full max-h-[350px] overflow-y-auto">
+          <form class="grid grid-cols-5 gap-[10px] mb-[24px] max-[767px]:grid-cols-4">
             <label class="cursor-pointer" data-for="32">
               <input type="radio" name="color" class="sr-only peer" checked />
               <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
                 <img src="img/pr-cmall-img.png" alt="Цвет 1" />
               </div>
             </label>
-
           </form>
+        </div>
         <div class="flex mt-[10px]">
             <button class="bg-[#009FFF] transition hover:bg-[#009FFF]/80 text-[16px] font-bold text-[#fff] rounded-[8px]
             py-[8px] px-[24px] mr-[10px]">Выбрать</button>
