--- a/catalog.html
+++ b/catalog.html
@@ -592,34 +592,34 @@
             Параметр быстрого фильтра
             <img src="img/icons/xmark.svg" alt="" class="cursor-pointer hover:brightness-0">
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
-          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E] hover:text-blue transition cursor-pointer">
+          <button class="flex-jc-c px-3 h-10 border  rounded-[50px] text-[#6E6E6E] hover:text-blue transition cursor-pointer">
             Быстрый фильтр
           </button>
         </div>
@@ -667,74 +667,7 @@
           <div
               class="w-full grid grid-cols-1 sm:grid-cols-1 min-[1000px]:grid-cols-1 min-[1100px]:grid-cols-1 
               min-[1200px]:grid-cols-2 min-[1600px]:grid-cols-4 min-[1500px]:grid-cols-3 gap-6">
-            <div data-for="12" class="w-full">
-              <div class="w-full h-[427px] border rounded-[16px] relative z-[-1]">
-                <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
-                  <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer hover:bg-[#56baf8] transition">
-                    <img src="img/icons/heard-gray.svg" alt="heard-gray">
-                  </div>
-                  <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px] cursor-pointer hover:bg-[#56baf8] transition">
-                    <img src="img/icons/rating-gray.svg" alt="rating-gray">
-                  </div>
-                </div>
-
-                <div class="swiper swiperProductItems h-full">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide px-6 flex-jc-c">
-                      <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                    </div>
-                    <div class="swiper-slide px-6 flex-jc-c">
-                      <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                    </div>
-                    <div class="swiper-slide px-6 flex-jc-c">
-                      <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                    </div>
-                  </div>
-                  <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-                </div>
-
-
-              </div>
-              <div class="w-full p-4">
-                <div class="flex-jsb-c">
-                  <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
-                    <img src="img/icons/star-yellow.svg" alt="star-yellow">
-                    4.2
-                    <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
-                    29 отзывов
-                  </div>
-                  <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
-                </div>
-
-                <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
-                  Ninja X SF
-                  245 см тест 15-50 гр</h3>
-
-
-                <div class="flex-js-c gap-2 text-[#707070] hidden">
-                  Производитель
-                  <span class="text-[#323232] font-bold">Daiwa</span>
-                </div>
-
-
-                <div class="flex-js-c gap-1 mt-2">
-                  <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                  <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
-                </div>
-
-
-                <div class="flex-jsb-c mt-2">
-                  <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
-                  <button
-                      class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-                    В корзину
-                    <img src="img/icons/basket-white.svg" alt="">
-                  </button>
-                </div>
-
-
-              </div>
-            </div>
+            <component data-for="12" src="./components/product-card.html"></component>
           </div>
         </div>
 
