--- a/check-offer.html
+++ b/check-offer.html
@@ -84,7 +84,7 @@
           <div class="w-full mt-[60px] max-[767px]:mt-[30px]">
             <h4 class="text-[24px] mb-6 font-semibold">Как доставить заказ</h4>
             
-            <div class="w-full grid grid-cols-3 gap-4 sm:gap-6 max-[767px]:grid-cols-1">
+            <div class="w-full grid max-[1200px]:grid-cols-2 gap-4 sm:gap-6 max-[767px]:grid-cols-1">
               <label class="w-full relative">
                 <input type="radio" name="order" class="peer hidden" checked>
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
@@ -158,7 +158,7 @@
           <div class="w-full mt-[60px] max-[767px]:mt-[30px]">
             <h4 class="text-[24px] font-medium mb-6">Как будете оплачивать?</h4>
 
-            <div class="w-full grid grid-cols-4 gap-6 max-[767px]:grid-cols-1">
+            <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-6">
               <label class="w-full relative">
                 <input type="radio" name="card" class="peer hidden" checked>
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
